--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Edit an article</h1>
 
 <% if @article.errors.any? %>
     <h2>The following errors prevented the article from getting created</h2>
@@ -22,7 +22,3 @@
         <%= f.submit %> 
     </p>
 <% end %>
-
-<p>
-    <%= link_to "Back to articles listing", articles_path %>
-</p>
