--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,23 +1,41 @@
 
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from getting created</h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
+<div class="row">
+    <div class="col-md-12 col-lg-6 order-lg-1">
+        <% if @article.errors.any? %>
+            <div class="alert alert-danger" role="alert">
+                <h5>The following errors prevented the article from getting created</h5>
+                <ul>
+                    <% @article.errors.full_messages.each do |msg| %>
+                        <li><%= msg %></li>
+                    <% end %>
+                </ul>
+            </div>
         <% end %>
-    </ul>
-<% end %>
+    </div>
 
-<%= form_for @article do |f| %>
-    <p>
-        <%= f.label :title %> <br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description %> <br/>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.submit %> 
-    </p>
-<% end %>
+    <div class="col-md-12 col-lg-6 order-lg-0">
+        <%= form_for @article do |f| %>
+            <div class="form-group row">
+                <div class="col-sm-2 col-form-label">
+                    <%= f.label :title, for: 'article_title' %>
+                </div>
+                <div class="col-sm-10">
+                    <%= f.text_field :title, class: 'form-control', id: 'article_title' %>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-2 col-form-label">
+                    <%= f.label :description, for: 'article_description' %>        
+                </div>
+                <div class="col-sm-10">
+                    <%= f.text_area :description, class: 'form-control', id: 'article_description', rows: '5' %>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="offset-md-2 col-sm-10">
+                    <%= f.submit :class => 'btn btn-primary' %> 
+                </div>
+            </div>
+        <% end %>
+    </div>
+</div>
