--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,10 @@
-<h1>Edit an article</h1>
-
-<%= render 'form' %>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1>Edit an article</h1>
+        </div>
+        <div class="col-12">
+            <%= render 'form' %>
+        </div>
+    </div>
+</div>
