--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,23 @@
-<h1>Articles list</h1>
+<div class="container">
+    <div class="row justify-content-center justify-content-md-start">
+        <% @articles.each do |article| %>
+            <div class="card mb-3 article-card m-3">
+                <div class="row no-gutters h-100">
+                    <div class="col-md-12">
+                        <div class="card-body d-flex flex-column h-100">
+                            <h5 class="card-title"><%= article.title %></h5>
+                            <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+                            <p class="card-text mt-auto"><small class="text-muted"><%= time_ago_in_words(article.updated_at) %></small></p>
 
-<p>
-    <%= link_to "Create new article", new_article_path %>
-</p>
-
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-    </tr>
-
-    <% @articles.each do |article| %>
-        <tr>
-            <td><%= article.title %></td>
-            <td><%= article.description %></td>
-            <td><%= link_to 'Edit', edit_article_path(article) %></td>
-            <td><%= link_to 'Show', article_path(article) %></td>
-            <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
-        </tr>  
-    <% end %>
-</table>
+                            <div>                    
+                                <%= link_to 'Edit', edit_article_path(article), class: 'btn btn-sm btn-primary' %>
+                                <%= link_to 'Show', article_path(article), class: 'btn btn-sm btn-warning' %>
+                                <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-danger' %>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        <% end %>
+    </div>
+</div>
