--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,12 @@
-<h1>Create an article</h1>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1>Create an article</h1>
+        </div>
+        <div class="col-12">            
+            <%= render 'form' %>
 
-<%= render 'form' %>
-
-<p>
-    <%= link_to "Back to articles listing", articles_path %>
-</p>
+            <%= link_to "Back to articles listing", articles_path %>
+        </div>
+    </div>
+</div>
