--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,9 @@
                         <div class="card-body d-flex flex-column h-100">
                             <h5 class="card-title"><%= article.title %></h5>
                             <p class="card-text"><%= truncate(article.description, length: 100) %></p>
-                            <p class="card-text mt-auto"><small class="text-muted"><%= time_ago_in_words(article.updated_at) %></small></p>
+                            <p class="card-text mt-auto"><small class="text-muted">
+                                Created by: <%= article.user.username if article.user %> - <%= time_ago_in_words(article.updated_at) %></small>
+                            </p>
 
                             <div>                    
                                 <%= link_to 'Edit', edit_article_path(article), class: 'btn btn-sm btn-primary' %>
