--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,27 +1,32 @@
-<%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-        <% user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+<div class="row">
+    <div class="col-md-12 col-lg-6 order-lg-1">
+        <% if @user.errors.any? %>
+            <div class="alert alert-danger" role="alert">
+                <h5>The following errors prohibited this user from being saved:</h5>
+                <ul>
+                    <% @user.errors.full_messages.each do |msg| %>
+                        <li><%= msg %></li>
+                    <% end %>
+                </ul>
+            </div>
         <% end %>
-      </ul>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :username %>
-    <%= form.text_field :username %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+    <div class="col-md-12 col-lg-6 order-lg-0">
+        <%= form_for @user do |f| %>
+            <div class="form-group">
+              <%= f.label :username, for: 'user_title' %>
+              <%= f.text_field :username, class: 'form-control', id: 'user_title', placeholder: 'Username' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :email, for: 'user_email' %>
+              <%= f.email_field :email, class: 'form-control', id: 'user_email', placeholder: 'E-mail' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :password, for: 'password_description' %>        
+              <%= f.password_field :password, class: 'form-control', id: 'password_description', placeholder: 'Password' %>
+            </div>
+            <%= f.submit 'Sign up', :class => 'btn btn-primary' %> 
+        <% end %>
+    </div>
+</div>
