--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1>New user</h1>
+        </div>
+        <div class="col-12">            
+            <%= render 'form' %>
+        </div>
+    </div>
+</div>
