--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1>Editing user</h1>
+        </div>
+        <div class="col-12">            
+            <%= render 'form', user: @user %>
+            
+            <div class="mt-3">        
+                <%= link_to 'Show', @user %> |
+                <%= link_to 'Back', users_path %>
+            </div>
+        </div>
+    </div>
+</div>
