--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,5 @@
 <div class="container">
     <div class="row justify-content-center justify-content-md-start">
-        <% @articles.each do |article| %>
-            <div class="card mb-3 article-card m-3">
-                <div class="row no-gutters h-100">
-                    <div class="col-md-12">
-                        <div class="card-body d-flex flex-column h-100">
-                            <h5 class="card-title"><%= article.title %></h5>
-                            <p class="card-text"><%= truncate(article.description, length: 100) %></p>
-                            <p class="card-text mt-auto"><small class="text-muted">
-                                Created by: <%= article.user.username if article.user %> - <%= time_ago_in_words(article.updated_at) %></small>
-                            </p>
-
-                            <div>                    
-                                <%= link_to 'Edit', edit_article_path(article), class: 'btn btn-sm btn-primary' %>
-                                <%= link_to 'Show', article_path(article), class: 'btn btn-sm btn-warning' %>
-                                <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-danger' %>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> 
-        <% end %>
+        <%= render 'articles', obj: @articles %>
     </div>
 </div>
