--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -10,9 +10,11 @@
                     </p>
 
                     <div>                    
-                        <%= link_to 'Edit', edit_article_path(article), class: 'btn btn-sm btn-primary' %>
                         <%= link_to 'Show', article_path(article), class: 'btn btn-sm btn-warning' %>
-                        <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-danger' %>
+                        <% if logged_in? && current_user == article.user %>
+                            <%= link_to 'Edit', edit_article_path(article), class: 'btn btn-sm btn-primary' %>
+                            <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-danger' %>
+                        <% end %>
                     </div>
                 </div>
             </div>
