--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,32 +17,43 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <%= link_to 'Write an article', new_article_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+        <ul class="navbar-nav mr-auto">          
+            <li class="nav-item active">
+              <%= link_to(articles_path, :class => "nav-link") do %>
+                Articles <span class="sr-only">(current)</span>
+              <% end %>
+            </li>
+             <% if logged_in? %>
+              <li class="nav-item active">
+                  <%= link_to 'Write new', new_article_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item active">
+                  <%= link_to 'Users', users_path, class: 'nav-link' %>
+              </li>
+             <% end %>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <ul class="navbar-nav ml-auto">
+          <% if logged_in? %>
+            <li class="nav-item dropdown">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <%= link_to 'Edit profile', edit_user_path(current_user), class: 'dropdown-item' %>
+                <%= link_to 'View profile', user_path(current_user), class: 'dropdown-item' %>
+                <div class="dropdown-divider"></div>
+                <%= link_to 'Logout', logout_path, method: :delete, class: "dropdown-item" %>
+              </div>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                My profile
+              </a>
+            </li>
+          <% else %>
+              <li class="nav-item"> 
+                  <%= link_to 'Log in',  login_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item"> 
+                  <%= link_to 'Sign up',  signup_path, class: "nav-link" %>
+              </li>
+          <% end %>
+        </ul>
       </div>
     </nav>
     <%= render 'layouts/messages' %>
