--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,7 +15,7 @@
                     <h5 class="card-title"><%= @article.title %></h5>
                     <p class="card-text"><%= @article.description %></p>
 
-                    <% if logged_in? && current_user == @article.user %>
+                    <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
                         <%= link_to "Edit this article", edit_article_path(@article), class: 'btn btn-sm btn-primary' %> 
                         <%= link_to "Delete this article", article_path, method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-sm btn-danger' %> 
                     <% end %>
