--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,9 @@
           <%= gravatar_for user %>
           <%= link_to user.username, user_path(user), class: "card-link font-weight-bolder mt-3" %>
           <small><%= pluralize(user.articles.count, "article") if user.articles %></small>
+          <% if logged_in? && current_user.admin? %>
+            <%= link_to 'Delete', user_path(user), method: :delete, data: { confirm: 'Are you sure you want to delete the user and all their articles?' }, class: 'btn btn-sm btn-danger mt-2' %>
+          <% end %>
         </div>
       </div>
     <% end %>
